--- a/package.json
+++ b/package.json
@@ -10,29 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.2.0",
-    "@react-native-community/datetimepicker": "^6.3.2",
-    "@react-native-community/netinfo": "^9.3.0",
-    "@react-native-masked-view/masked-view": "^0.2.7",
-    "@react-native-picker/picker": "^2.4.4",
-    "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/drawer": "^6.4.4",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/drawer": "^6.5.1",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "intl": "^1.2.5",
-    "luxon": "^3.0.3",
+    "luxon": "^3.1.0",
     "react": "18.1.0",
-    "react-hook-form": "^7.35.0",
-    "react-native": "0.70.0",
-    "react-native-gesture-handler": "^2.6.0",
-    "react-native-mmkv": "^2.4.3",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0",
-    "react-native-ui-lib": "^6.21.0",
+    "react-hook-form": "^7.39.6",
+    "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-mmkv": "^2.5.1",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-ui-lib": "^6.24.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -43,7 +42,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.72.1",
+    "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
