--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,8 @@ buildscript {
             ndkVersion = "24.0.8215888"
         } else {
             // Otherwise we default to the side-by-side NDK version from AGP.
-            ndkVersion = "21.4.7075529"
+            // ndkVersion = "21.4.7075529"
+               ndkVersion = '25.1.8937393'
         }
     }
     repositories {
