Dependency updates, dark theme support enabled

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
+  //For editor autocompletion
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@app/*": ["src/*"],
-      "@components/*": ["src/components/*"],
       "@constants": ["src/constants"],
+      "@components/*": ["src/components/*"],
       "@navigators/*": ["src/navigators/*"],
       "@redux/*": ["src/redux/*"],
       "@screens/*": ["src/screens/*"]
