--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ DerivedData
 *.ipa
 *.xcuserstate
 ios/.xcode.env.local
-ios/Pods
 
 # Android/IntelliJ
 #
@@ -62,3 +61,6 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# testing
+/coverage
