--- a/package.json
+++ b/package.json
@@ -4,44 +4,44 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator \"iPhone 14 Pro Max\"",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/datetimepicker": "^7.1.0",
+    "@react-native-community/datetimepicker": "^7.4.1",
     "@react-native-picker/picker": "^2.4.10",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "intl": "^1.2.5",
-    "luxon": "^3.3.0",
+    "luxon": "^3.4.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-native": "0.71.11",
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-mmkv": "^2.8.0",
-    "react-native-reanimated": "^3.3.0",
-    "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.21.0",
-    "react-native-ui-lib": "^7.4.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.1.0",
+    "react-hook-form": "^7.45.4",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-mmkv": "^2.10.1",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-ui-lib": "^7.6.2",
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/luxon": "^3.3.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/luxon": "^3.3.1",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
@@ -49,12 +49,12 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.10",
+    "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   }
 }
