--- a/ios/rn_drawertabnav_boilerplate/Info.plist
+++ b/ios/rn_drawertabnav_boilerplate/Info.plist
@@ -23,17 +23,14 @@
 		<key>CFBundleVersion</key>
 		<string>$(CURRENT_PROJECT_VERSION)</string>
 		<key>LSRequiresIPhoneOS</key>
-		<true/>
+		<true />
 		<key>NSAppTransportSecurity</key>
 		<dict>
-			<key>NSExceptionDomains</key>
-			<dict>
-				<key>localhost</key>
-				<dict>
-					<key>NSExceptionAllowsInsecureHTTPLoads</key>
-					<true/>
-				</dict>
-			</dict>
+			<!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
+			<key>NSAllowsArbitraryLoads</key>
+			<false />
+			<key>NSAllowsLocalNetworking</key>
+			<true />
 		</dict>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string></string>
@@ -41,7 +38,7 @@
 		<string>LaunchScreen</string>
 		<key>UIRequiredDeviceCapabilities</key>
 		<array>
-			<string>armv7</string>
+			<string>arm64</string>
 		</array>
 		<key>UISupportedInterfaceOrientations</key>
 		<array>
@@ -50,7 +47,7 @@
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
-		<false/>
+		<false />
 		<key>UIAppFonts</key>
 		<array>
 			<string>AntDesign.ttf</string>
